# back_to_sequences

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  SRR33792312.fastq  SRR33792312_query.fastq  SRR33792312_query_rc.fa  TODO.md  VERSIONS.md  afac  afac.fa  afac_K2R  afac_ref.fa  concept.txt  dist-workspace.toml  fof.txt  index_kmers.sh  install.sh  kmer.fa  mirror_on_github.sh  query_reads.sh  validate.txt
.github/workflows/: draft-pdf.yml  lints.yaml  release.yml  tests.yaml
back_to_sequences/: Cargo.toml
back_to_sequences/src/: main.rs
bench_query/: SRR22007221.contigs.fa.zst  SRR22007221.unitigs.fa.zst  afac.fa  query.fa  tiny_query.fa
benchs/: b2smain  bench.sh  bench_no_kmindex.sh  benchs.sh  clean.sh  disk_mem_count.sh  generate_data.sh
bioconda_recipe/: build.sh  meta.yaml
logan_blast/: README.md  blast_logan_contigs.sh  local_blast.py  logan_blast.sh
logan_blast/example/: accessions.txt  contigs.txt  query.fa
paper/: back_to_sequences.md  paper.bib  paper.md  references.bib
scripts/: README.md  benchmark.sh  example.txt  extract_random_kmers_from_a_fasta_file.py  extract_random_sequences.py  filter_reads.py  generate_random_fasta.py  revcomp.py  universal_to_kmtricks_canonical.py  yield_reads.py
src/: chunks.rs  cli.rs  consts.rs  count.rs  exact_count.rs  file_parsing.rs  get_headers.rs  get_km_paths.rs  index_kmers.rs  kmer_counter.rs  kmer_hash.rs  kmer_prefiltration.rs  lib.rs  main.rs  matched_sequences.rs  sequence_normalizer.rs  tests.rs  to_reads.rs  validate_kmers.rs
src/tests/: constants.rs  fasta.rs  fastq.rs  io.rs
test/: aac  afac  kmer.fa  kmer_hamming1.fa  out.fa  rev_kmer.fa  seq.fa
tests/: functional.rs
tests/data/: kmers_out.csv  kmers_out_pos.csv  kmers_out_pos_mapping.csv  reads_out.fasta  reads_out_mapping.fasta
tiny_test/: filtered_reads.fasta  filtered_reads_ref_stranded.fasta  filtered_with_mapping_position_rc_ref.fa  filtered_with_mapping_position_ref.fa  kmer.fa  lc_ref.fa  low_complexity_kmer.fa  lower_kmer.fa  lower_kmer_N.fa  lower_kmers_N.fa  one_kmer.fa  one_low_complexity_kmer.fa  one_rc_kmer.fa  rc_kmer.fa  sequence.fa  sequence_low_complexity.fa  tiny_test.sh
