[package]
name = "back_to_sequences"
version = "0.7.1"
edition = "2021"

authors = [
	"Pierre Peterlongo <pierre.peterlongo@inria.fr>",
	"Anthony Baire <Anthony.Baire@irisa.fr>",
	"Pierre Marijon <pierre@marijon.fr>",
	]
description = "Back to sequences: find the origin of kmers"
rust-version = "1.70"

readme = "Readme.md"
license-file = "LICENSE"

[dependencies]
# Error management
anyhow           = { version = "1" }

# CLI parsing
clap             = { version = "4", features = ["derive", "cargo"] }

# File parsing
fxread           = { version = "0.2" }

# Parallel
rayon            = { version = "1" }

# Other
ahash            = { version = "0.8.12" }
atomic-counter   = { version = "1" }
auto_enums       = { version = "0.8.7" }
ctor             = { version = "0.4" }
entropy	         = { version = "0.4"}
integer-encoding = { version = "4.0.2" }

# Filter kmers before hashing
fastbloom 		 = { version = "0.12.1" }
simd-minimizers  = { version = "1.2.0", features = ["hide-simd-warning"] }
packed-seq		 = { version = "3.0.1" }


[dev-dependencies]
assert_cmd      = { version = "2.0.17"}
biotest         = { version = "0.2", features = ["fasta", "fastq", "sequence"] }
rand            = { version = "0.9" }
tempfile        = { version = "3.20.0" }

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true
