[package]
name = "back_to_sequences"
version = "0.8.3"
edition = "2021"
repository = "https://github.com/pierrepeterlongo/back_to_sequences"
homepage = "https://b2s-doc.readthedocs.io/"

authors = [
	"Pierre Peterlongo <pierre.peterlongo@inria.fr>",
	"Anthony Baire <Anthony.Baire@irisa.fr>",
	"Pierre Marijon <pierre@marijon.fr>",
	]
description = "Back to sequences: find the origin of kmers"
rust-version = "1.86"
pr-run-mode = "upload"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
# Error management
anyhow           = { version = "1" }

# CLI parsing
clap             = { version = "4", features = ["derive", "cargo"] }

# File parsing
needletail 		 = { version ="0.6.3" }

# Parallel
rayon            = { version = "1" }

# Other
ahash            = { version = "0.8" }
atomic-counter   = { version = "1" }
auto_enums       = { version = "0.8" }
ctor             = { version = "0.6" }
entropy	         = { version = "0.4"}
integer-encoding = { version = "4" }


[dev-dependencies]
assert_cmd      = { version = "2"}
biotest         = { version = "0.2", features = ["fasta", "fastq", "sequence"] }
rand            = { version = "0.9" }
tempfile        = { version = "3" }

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
