[package]
name = "back_to_sequences"
version = "0.1.0"
edition = "2021"
author = "Pierre Peterlongo"
long_about = "From filtered headers to sequences in fasta format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nop-json = "2.0"
serde = "1.0"
serde_json = "1.0"
read_iter = "0.1"
clap = { version = "4.4.3", features = ["derive"] }
fasta = "0.1.3"